Fix broken styles

--- a/packages/core/src/components/slider/_slider.scss
+++ b/packages/core/src/components/slider/_slider.scss
@@ -191,25 +191,28 @@ $track-height: $track-size !default;
 
 .pt-range-slider.pt-vertical {
   .pt-slider-handle {
+    margin-left: 0;
     width: $handle-size;
     height: $handle-size / 2;
 
+    .pt-slider-label {
+      margin-left: 0;
+    }
+
     &:first-of-type {
-      margin-top: $handle-size / 2;
       border-top-left-radius: 0;
-      border-top-right-radius: $pt-border-radius;
       border-bottom-right-radius: $pt-border-radius;
+
+      .pt-slider-label {
+        transform: translate($label-offset);
+      }
     }
 
     &:last-of-type {
-      margin-left: 0;
+      margin-bottom: $handle-size / 2;
       border-top-left-radius: $pt-border-radius;
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
-
-      .pt-slider-label {
-        margin-left: 0;
-      }
     }
   }
 }
